<?xml version="1.0" encoding="utf-8"?>
<!--IT19097084 Ayodya Hettiarachchi-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewExistingBudget">

  <androidx.cardview.widget.CardView
      android:id="@+id/mainCard"
      android:layout_width="357dp"
      android:layout_height="236dp"
      app:cardBackgroundColor="@color/cardBackground"
      app:cardCornerRadius="6dp"
      app:contentPadding="10dp"
      app:contentPaddingBottom="20dp"
      app:contentPaddingLeft="40dp"
      app:contentPaddingRight="40dp"
      app:contentPaddingTop="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.518"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.183">

    <TextView
        android:id="@+id/totalExpValue"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="18dp"
        android:text="@string/demoBudgetSpentValue"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalSpent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/totalExp"
        android:textColor="@color/buttonText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/targetExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="110dp"
        android:text="@string/target"
        android:textColor="@color/buttonText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/targetValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="135dp"
        android:text="@string/demoTargetValue"
        android:textColor="@color/buttonText"
        android:textSize="50sp" />

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/subCard"
      android:layout_width="360dp"
      android:layout_height="134dp"
      app:cardBackgroundColor="@color/cardBackground"
      app:cardCornerRadius="6dp"
      app:contentPadding="10dp"
      app:contentPaddingBottom="10dp"
      app:contentPaddingLeft="40dp"
      app:contentPaddingRight="40dp"
      app:contentPaddingTop="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.576">

    <TextView
        android:id="@+id/remainderValue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/underBudgetValue"
        android:textColor="@color/buttonText"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/remainderText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="60dp"
        android:text="@string/underBudgetText"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

  </androidx.cardview.widget.CardView>

  <Button
      android:id="@+id/modifyBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/buttons"
      android:text="@string/modifybtn"
      android:onClick="gotoModify"
      android:textColor="@color/buttonText"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/mainCard"
      app:layout_constraintVertical_bias="0.679" />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="222dp"
      android:layout_height="51dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.132"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.827">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addExpense"
        android:inputType="numberDecimal" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/addBtn"
      android:layout_width="96dp"
      android:layout_height="49dp"
      android:background="@color/buttons"
      android:text="@string/addExpenseBtn"
      android:textColor="@color/buttonText"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.888"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.825" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textInputLayout2"
      android:layout_width="228dp"
      android:layout_height="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.142"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.941">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/removeInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/removeExp"
        android:inputType="numberDecimal" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/removeButton"
      android:layout_width="96dp"
      android:layout_height="49dp"
      android:background="@color/buttons"
      android:text="@string/removeExpBtn"
      android:textColor="@color/buttonText"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.888"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.941" />

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="439dp"
      android:layout_height="98dp"
      android:layout_marginBottom="35dp"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintBottom_toTopOf="@+id/mainCard"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0" />

  <ImageButton
      android:id="@+id/navBurger"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="12dp"
      android:background="@color/colorPrimary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/burger_foreground" />

  <TextView
      android:id="@+id/budgetNameNav"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/topNavShowExisting"
      android:textColor="@color/buttonText"
      android:textSize="18sp"
      app:layout_constraintBottom_toTopOf="@+id/toolbar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.34"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>