<?xml version="1.0" encoding="utf-8"?>
<!-- IT19097084
        Ayodya Hettiarachchi-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyBudget">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topNavModify"
        android:layout_width="418dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="603dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/burger_foreground" />

    <TextView
        android:id="@+id/modifyNavTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topNavModify"
        android:textColor="@color/buttonText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/currentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/budgetNameLayout"
        android:layout_width="336dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topNavModify"
        app:layout_constraintVertical_bias="0.305">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeBudgetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/changeName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/targetExpInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTarget"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <Button
        android:id="@+id/applyChanges"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:background="@color/buttons"
        android:onClick="gotoViewExistingBudget"
        android:text="@string/saveChangesBtn"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topNavModify"
        app:layout_constraintVertical_bias="0.696" />

    <Button
        android:id="@+id/deleteBudget"
        android:layout_width="136dp"
        android:layout_height="46dp"
        android:background="@color/cardBackground"
        android:onClick="gotoBudgetList"
        android:text="@string/deleteBtn"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topNavModify"
        app:layout_constraintVertical_bias="0.812" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/budgetAmountLayout"
        android:layout_width="327dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeBudgetAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/changeTarget"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/currentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentNameDemo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topNavModify"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/currentTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTargetDemo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

</androidx.constraintlayout.widget.ConstraintLayout>