<?xml version="1.0" encoding="utf-8"?>
<!--IT19097084 Ayodya Hettiarachchi-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewBudget">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="325dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="327dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/budgetAmountField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/bAmount"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmBudgetCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttons"
        android:onClick="gotoViewExistingBudget"
        android:text="@string/createbtn"
        android:textColor="@color/buttonText"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="325dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/budgetNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bNotes" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCreate"
        android:layout_width="422dp"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/topNavCreateTxt"
        android:layout_width="202dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/topNavCreate"
        android:textColor="@color/buttonText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbarCreate"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/topNavBurger"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/navigationBurger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burger_foreground"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>